# parametric-runtime-deformers

./: .gitignore  CMakeLists.txt  README.md  deformer.cxx  deformer.h  main.cxx
deformers/: bendDeformer.cxx  bendDeformer.h  config_deformer.cxx  config_deformer.h  deformer.I  deformer.cxx  deformer.h  expandDeformer.cxx  expandDeformer.h  sineDeformer.I  sineDeformer.cxx  sineDeformer.h  squashStretchDeformer.cpp  squashStretchDeformer.h  twistDeformer.cxx  twistDeformer.h
imgui/: README.md  panda3d_imgui.cpp  panda3d_imgui.hpp  panda3d_imgui_main.cxx
